--- a/debian/rules
+++ b/debian/rules
@@ -6,3 +6,6 @@ export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 
 %:
 	dh $@  --with autotools-dev --with autoreconf
+
+override_dh_strip:
+	dh_strip -plibfyba0 --keep-debug --dbg-package=libfyba0-dbg
