Removed obsolete syntax for AM_INIT_AUTOMAKE

--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,7 @@
 
 AC_PREREQ([2.59])
 AC_INIT(fyba, 4.1.1, thomas.hirsch@statkart.no)
-AM_INIT_AUTOMAKE(fyba, 4.1.1)
+AM_INIT_AUTOMAKE
 LT_INIT()
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_SRCDIR([include/fygm.h])
