--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,25 @@ Lib/*.lib
 *Release*
 *.sdf
 *.suo
+*.suosrc/*/*.o
+src/*/*.o
+src/*/*.lo
+src/*/.libs
+src/*/.deps
+*Makefile
+*Makefile.in
+src/*/lib*.la
+aclocal.m4
+autom4te.cache
+compile
+config.*
+depcomp
+install-sh
+ltmain.sh
+m4/*
+missing
+configure
+fyba.pc
+libtool
+stamp-h1
+
